# TestProd

./: Cargo.toml  Dockerfile  pub-multi.yml
.github/workflows/: docker-publish.yml
src/: main.rs  requests.txt
src/services/: mod.rs  surrealdb.sql  surrealdb.surql
src/services/example/: models.rs
src/services/orders/: models.rs
src/services/products/: mod.rs  models.rs
src/services/products/models/: filter.rs  mod.rs  product.rs
src/services/stores/: mod.rs  models.rs
src/services/templates/: appSettings.json  customerGroups.json  emailSettings.json  emailTemplates.json  orders.json  pages.json  paymentMethods.json  product.json  productCategories.json  redirects.json  shippingMethods.json  themePlaceholders.json  tokens.json  webhooks.json
src/services/tokens/: mod.rs  models.rs
src/util/: auth.rs  files.rs  graphql.rs  mod.rs  models.rs
src/util/auth/: mod.rs
src/util/store/models/: mod.rs
