[package]
name = "server"
authors = ["Himadu2000 <49078336+Himadu2000@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
async-graphql = "7.0.6"
rocket = "0.5.1"
surrealdb = { version = "1.5.3", features = ["kv-mem", "protocol-http"] }
serde = "1.0.203"
swd = { git = "https://github.com/Himadu2000/teststand", rev = "f668d8c" }
openssl = { version = "0.10", features = ["vendored"] }
